--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/sdtsui/udf-ee-todomvc"
+    "url": "https://github.com/sdtsui/react-ng2-ng1.5.3-rxJS-todomvc"
   },
   "author": "Daniel Tsui",
   "devDependencies": {
@@ -19,6 +19,8 @@
     "react": "^0.13.2",
     "rx": "^2.5.2",
     "webpack": "^1.8.9",
-    "classnames": "^2.1.2"
+    "classnames": "^2.1.2",
+    "todomvc-app-css": "^2.0.0",
+    "todomvc-common": "^1.0.0"
   }
 }
