--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "Recreate TodoMVC using React, Angular 2, and Angular 1.5 using \"unidirectional data flow\" with an EventEmitter.",
   "main": "index.js",
   "scripts": {
-    "start": "webpack -wdc --progress",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack -wdc --progress",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "react": "",
+    "ng2": "",
+    "ng1.5.3": ""
   },
   "repository": {
     "type": "git",
