--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack -wdc --progress",
+    "serve": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "react": "",
     "ng2": "",
@@ -19,7 +20,7 @@
     "babel-core": "^5.1.11",
     "babel-loader": "^5.0.0",
     "keymirror": "^0.1.1",
-    "react": "^0.13.2",
+    "react": "^0.14.8",
     "rx": "^2.5.2",
     "webpack": "^1.8.9",
     "classnames": "^2.1.2",
