--- a/react/package.json
+++ b/react/package.json
@@ -26,5 +26,8 @@
     "classnames": "^2.1.2",
     "todomvc-app-css": "^2.0.0",
     "todomvc-common": "^1.0.0"
+  },
+  "dependencies": {
+    "react-dom": "^0.14.8"
   }
 }
