[wip] test observable

--- a/ng1/package.json
+++ b/ng1/package.json
@@ -8,6 +8,7 @@
     "angular": "^1.4.3",
     "angular-resource": "^1.4.3",
     "angular-route": "^ 1.4.3",
+    "express": "^4.13.4",
     "nodemon": "^1.9.1",
     "todomvc-app-css": "^1.0.1",
     "todomvc-common": "^1.0.0"
