--- a/ng1/package.json
+++ b/ng1/package.json
@@ -12,6 +12,7 @@
     "keymirror": "^0.1.1",
     "nodemon": "^1.9.1",
     "rx": "^4.1.0",
+    "rx-angular": "^1.1.3",
     "todomvc-app-css": "^1.0.1",
     "todomvc-common": "^1.0.0"
   }
