[wip fix] next: modelSubject._onNext, fix, update version ?

--- a/ng2-js-quickstart/package.json
+++ b/ng2-js-quickstart/package.json
@@ -11,10 +11,14 @@
     "es6-shim": "^0.35.0",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
-    "zone.js": "0.6.6"
+    "zone.js": "0.6.6",
+    "todomvc-app-css": "^1.0.1",
+    "todomvc-common": "^1.0.0"
   },
   "devDependencies": {
     "concurrently": "^2.0.0",
-    "lite-server": "^2.1.0"
+    "keymirror": "^0.1.1",
+    "lite-server": "^2.1.0",
+    "rx": "^4.1.0"
   }
 }
