--- a/ng2/package.json
+++ b/ng2/package.json
@@ -20,6 +20,7 @@
     "angular2": "^2.0.0-beta.13",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.35.0",
+    "lodash": "^4.10.0",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
     "zone.js": "^0.6.6"
